xbnf_boot/tests/xbnf_lang/xbnf_lang_dump_snapshot.txt
# FIRST = {",", ";"}
# FOLLOW = {"*", "+"}
sep = ","
    / ";"

# FIRST = {CHAR, LOUD, SNAKE, STR}
# FOLLOW = {"*", "+", ",", "/", ";", "?", CHAR, EOF, LOUD, SNAKE, STR}
atom_term = LOUD
          / SNAKE
          / CHAR
          / STR

# FIRST = {CHAR, LOUD, SNAKE, STR}
# FOLLOW = {"/", CHAR, EOF, LOUD, SNAKE, STR}
suffix_term = atom_term (("?" / "*" / "+" / sep "*" / sep "+") atom_term)*

# FIRST = {CHAR, LOUD, SNAKE, STR}
# FOLLOW = {"/", EOF, SNAKE}
concat_term = suffix_term+

# FIRST = {CHAR, LOUD, SNAKE, STR}
# FOLLOW = {EOF, SNAKE}
term = concat_term ("/" concat_term)*

# FIRST = {SNAKE}
# FOLLOW = {EOF, SNAKE}
rule = SNAKE "=" term

# FIRST = {EOF, SNAKE}
# FOLLOW = {}
root = rule* EOF
